--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "autoprefixer": "^10.4.19",
+    "framer-motion": "^11.2.10",
     "gh-pages": "^6.1.1",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
