--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "framer-motion": "^11.2.10",
     "gh-pages": "^6.1.1",
     "postcss-cli": "^11.0.0",
+    "rc-scrollbars": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-swipeable-views": "^0.14.0",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
