--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rc-scrollbars": "^1.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "react-swipeable-views": "^0.14.0",
     "tailwindcss": "^3.4.3"
   },
