--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.19",
     "autoprefixer": "^10.4.19",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.436.0",
     "postcss-cli": "^11.0.0",
     "rc-scrollbars": "^1.1.6",
     "react": "^18.3.1",
